<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#3d5a99">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/fb" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:orientation="vertical"
            android:background="@drawable/backdrop"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">
            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:hint="@string/email"
                android:textSize="23sp"
                android:layout_weight="2.8"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:inputType="textEmailAddress" />
            <EditText
                android:id="@+id/etnewPassword"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:hint="@string/newpassword"
                android:textSize="23sp"
                android:layout_weight="2"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:inputType="number"/>

        </LinearLayout>
        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:background="@drawable/backlog"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:textColor="#ff565d60"
            android:layout_margin="15dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnSignup"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:text="@string/signup"
                android:background="@drawable/back"
                android:textColor="#638312"
                android:textSize="15sp"
                android:paddingLeft="15dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/tvHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notReg"
                android:textSize="15sp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>